name:                day01
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/amalloy/day01#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Malloy
maintainer:          amalloy@google.com
copyright:           MIT
category:            Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day01
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
